# Utext

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
app/: CMakeLists.txt  main.cpp
app/resources/: dark.qss  light.qss  resources.qrc  wordlist.txt
app/src/: CMakeLists.txt  Help.cpp  Help.h  Highlighter.cpp  Highlighter.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Message.cpp  Message.h  Message.ui  Search.cpp  Search.h  Search.ui  SubWindow.cpp  SubWindow.h  SubWindow.ui  TextArea.cpp  TextArea.h
